# Chase

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  default.profraw  vcpkg.json
.claude/: settings.json
.github/workflows/: ci.yml  coverage.yml
docs/: api.md  architecture.md  coverage_guide.md  fuzz_test_design.md  libevent_comparison.md  migration.md  nginx_comparison.md  race_test_design.md  security.md  stress_test_design.md
docs/evalution/: http_server_architecture_evolution.md  process_vs_thread_performance.md
docs/superpowers/architecture/: architecture.md
docs/superpowers/optimization/: performance-optimization.md
docs/superpowers/plans/: 2026-04-15-http-server-implementation-plan.md  2026-04-19-connection-pool-preallocation-plan.md
docs/superpowers/specs/: 2026-04-13-http-server-library-design.md  2026-04-19-connection-pool-preallocation-design.md  2026-04-21-module-refactor-design.md
examples/: CMakeLists.txt  README.md  libevent_server.c  minimal_server.c  production_server.c  threaded_server.c
include/: buffer.h  config.h  connection.h  connection_pool.h  error.h  eventloop.h  fileserve.h  handler.h  http_parser.h  logger.h  master.h  mime.h  response.h  router.h  security.h  server.h  socket.h  ssl_wrap.h  thread_pool_manager.h  timer.h  vhost.h  worker.h
scripts/: benchmark.sh  coverage_report.sh  diagnose_multiprocess_performance.sh  generate_coverage.sh  libevent_comparison.sh  nginx_comparison.sh  run_race_tests.sh  run_valgrind.sh  stress_test_24h.sh
src/: buffer.c  config.c  connection.c  connection_pool.c  error.c  eventloop.c  fileserve.c  handler.c  http_parser.c  logger.c  master.c  mime.c  response.c  router.c  security.c  server.c  socket.c  ssl_wrap.c  thread_pool_manager.c  timer.c  vhost.c  worker.c
test/: CMakeLists.txt
test/certs/: test.crt  test.key
test/coverage_report/: index.html
test/integration/c_core/: test_boundary.c  test_chunked.c  test_config.c  test_connection.c  test_connection_pool.c  test_error.c  test_eventloop.c  test_fileserve.c  test_gzip.c  test_handler.c  test_hot_config.c  test_http_parser.c  test_keepalive.c  test_logger.c  test_phase1_phase2_integration.c  test_process_mgmt.c  test_race_connection_pool.c  test_race_security.c  test_race_timer.c  test_range.c  test_regex_router.c  test_response.c  test_router.c  test_security.c  test_server.c  test_signal_handling.c  test_ssl_wrap.c  test_thread_pool_manager.c  test_timer.c  test_vhost.c  test_worker_crash.c
test/report/: test_verification_report_2026-04-21.md
